--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@stripe/stripe-js": "^5.6.0",
     "@tanstack/react-table": "^8.20.6",
@@ -17,6 +19,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-error-overlay": "^6.0.9",
     "react-hook-form": "^7.54.2",
@@ -29,6 +32,7 @@
     "react-to-print": "^3.0.5",
     "react-toastify": "^11.0.2",
     "react-type-animation": "^3.2.0",
+    "recharts": "^2.15.1",
     "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
