--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
+    "react-autosuggest": "^10.1.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-error-overlay": "^6.0.9",
@@ -26,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
